--- a/index.html
+++ b/index.html
@@ -35,28 +35,43 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Notre expertise</a>
-              </li>
-              
+              </li> 
               <li class="nav-item">
                 <a class="nav-link" href="#">Contact</a>
               </li>
+            </ul>
+          </div>
+          <div>          
                <li class="nav-item">
-                <a href="#!" class="nav-link navbar-link-2 waves-effect">
-                <i class="fas fa-shopping-cart "></i>
+                  <a href="#!" class="nav-link navbar-link-2 waves-effect" style="border: 0.15rem white solid; border-radius: 1rem; color: white;">Panier <i class="fas fa-shopping-cart"></i>
                 </a>
                </li>
-            </ul>
           </div>
         </div>
       </nav>
       <!-- Accueil -->
       <!-- Nos produits -->
-      <!-- Notre exeprtise -->
+
+      <!-- Notre expertise -->
+
+      <!-- Notre team -->
+      <div class="container-fluid">
+        <div class="row bg-primary px-5 pb-3" style="vertical-align: middle;">
+          <h2 class="text-center text-light py-3">Une équipe à vos côtés</h2>
+            <div class="col-lg-5">
+              <img src="assets/img/equipe.jpg" style="width: 100%;" alt="photo de l'equipe" title="photo de l'equipe">
+            </div>
+            <div class="col-lg-7 text-white">
+              <p>Pour vous accompagner dans l’ensemble de vos projets, une équipe commerciale accessible au téléphone est à votre service. Nos collaborateurs sont tous experts et hautement certifiés sur la plupart des technologies et des acteurs du marché<br><br>
+                Ils sauront vous écouter, comprendre vos besoins, vous proposer des solutions adaptées et si nécessaire, mettre à votre disposition l’ensemble des ressources de l’entreprise.</p>
+            </div>          
+        </div>
+      </div>
       <!-- Contact -->
       <!-- Footer -->
-      <div class="footer">
+      <div class="footer bg-dark text-white">
         <footer>
-            <div class="social"><a href="#"><i class="fab  fa-instagram"></i></a><a href="#"><i class="fab fa-snapchat"></i></a><a href="#"><i class="fab fa-twitter"></i></a><a href="#"><i class="fab fa-facebook"></i></a></div>
+            <div class="social"><a href="#"><i class="fab fa-instagram"></i></a><a href="#"><i class="fab fa-snapchat"></i></a><a href="#"><i class="fab fa-twitter"></i></a><a href="#"><i class="fab fa-facebook"></i></a></div>
             <ul class="list-inline">
                 <li class="list-inline-item"><a href="#">Accueil</a></li>
                 <li class="list-inline-item"><a href="#">Nos produits</a></li>
