--- a/index.html
+++ b/index.html
@@ -49,7 +49,47 @@
           </div>
         </div>
       </nav>
-      <!-- Accueil -->
+      <!-- Accueil Carousel -->
+        <section>
+          <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="assets/img/professional-esport-gamer-playing-in-game-tournament.jpg" class="d-block w-100" alt="..." style="height: 90vh;" >
+                <div class="carousel-caption d-none d-md-block d-flex h-75 align-self-center">
+                  <h1 class="text-capitalize text-light display-1 "><strong>E-Commerce Informatique</strong></h1>
+                  <h2 class="display-5 text-light mb-5">Les Professionnels de l'Informatique</h2>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="assets/img/professional-esport-gamer-playing-in-game-tournament.jpg" class="d-block w-100" alt="..." style="height: 90vh;">
+                <div class="carousel-caption d-none d-md-block d-flex h-75 align-self-center">
+                  <h1 class="text-capitalize text-light display-1"><strong>E-Commerce Informatique</strong></h1>
+                  <h2 class="display-5 text-light mb-5">Les Professionnels de l'Informatique</h2>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="assets/img/professional-esport-gamer-playing-in-game-tournament.jpg" class="d-block w-100" alt="..." style="height: 90vh;">
+                <div class="carousel-caption d-none d-md-block d-flex h-75 align-self-center">
+                  <h1 class="text-capitalize text-light display-1"><strong>E-Commerce Informatique</strong></h1>
+                  <h2 class="display-5 text-light mb-5">Les Professionnels de l'Informatique</h2>
+                </div>
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+    </section>
       <!-- Nos produits -->
       <!-- Notre exeprtise -->
       <!-- Contact -->
