ajout des blocs partenaires,services,expertises

--- a/index.html
+++ b/index.html
@@ -34,9 +34,8 @@
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Notre expertise</a>
+                <a class="nav-link" href="#expertise">Notre expertise</a>
               </li>
-              
               <li class="nav-item">
                 <a class="nav-link" href="#">Contact</a>
               </li>
@@ -49,16 +48,144 @@
           </div>
         </div>
       </nav>
-      <!-- Accueil -->
-      <!-- Nos produits -->
-      <!-- Notre exeprtise -->
-      <!-- Contact -->
-      <!-- Footer -->
+      <main>
+        <!-- Accueil -->
+        <!-- Nos produits -->
+        <!-- Notre expertise -->
+        <section>
+          <div class="container-fluid">
+            <div class="row">
+              <h2 class="text-center text-decoration-underline my-4 display-2 mb-5">Notre Expertise</h2>
+              <div class="col-sm-12 col-md-3 col-lg mb-5">
+                <div class="card" style="border: none;">
+                  <div>
+                    <img src="assets/img/guarantee.png" class="card-img-top picto" alt="Garantie" title="Garantie">
+                    <h3 class="text-center">Garantie</h3>
+                    <div class="card-body">
+                      <p class="card-text text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum magni ipsam accusamus, corporis velit sit sequi fugit dignissimos tempora nostrum quae. Optio itaque sapiente tenetur eligendi nobis! Accusamus, nulla laudantium.</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-12 col-md-3 offset-md-1 col-lg mb-5">
+                <div class="card" style="border: none;">
+                  <div>
+                    <img src="assets/img/security-checked.png" class="card-img-top picto" alt="Sécurité" title="Variété">
+                    <h3 class="text-center">Sécurité</h3>
+                    <div class="card-body">
+                      <p class="card-text text-center">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nihil, asperiores laudantium deserunt quaerat in molestias ipsum vero perferendis illum quas repudiandae obcaecati quam animi provident, accusantium quisquam enim quis fugit?</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-12 col-md-3 offset-md-1 col-lg mb-5">
+                <div class="card" style="border: none;">
+                  <div>
+                    <img src="assets/img/variety.png" class="card-img-top picto" alt="Varitété" title="Varitété">
+                    <h3 class="text-center">Variété</h3>
+                    <div class="card-body">
+                      <p class="card-text text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum voluptatibus vero tenetur quidem nihil magni assumenda rem perspiciatis! Consequuntur totam ex soluta perferendis ad quod magnam sequi architecto harum neque!</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              </div>
+            </div>
+          </div>
+        </section>
+        <!-- Nos Partenaires -->
+        <section>
+          <div class="container-fluid">
+            <div class="row">
+              <h2 class="text-center text-decoration-underline my-4 display-2 mb-5">Nos Marques Partenaires</h2>
+              <div class="col-sm-12 col-md-3 col-lg mb-5">
+                <div class="card" style="border: none;">
+                  <div>
+                    <img src="assets/img/hp.png" class="card-img-top picto" alt="Garantie" title="Garantie">
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-12 col-md-3  col-lg mb-5">
+                <div class="card" style="border: none;">
+                  <div>
+                    <img src="assets/img/lenovo.png" class="card-img-top picto" alt="Sécurité" title="Variété">
+                    </div>
+                </div>
+              </div>
+              <div class="col-sm-12 col-md-3  col-lg mb-5">
+                <div class="card" style="border: none;">
+                  <div>
+                    <img src="assets/img/asus.png" class="card-img-top picto" alt="Varitété" title="Varitété">
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-12 col-md-3  col-lg mb-5">
+                <div class="card" style="border: none;">
+                  <div>
+                    <img src="assets/img/alienware.png" class="card-img-top picto" alt="Varitété" title="Varitété">
+                  </div>
+                </div>
+              </div>
+              </div>
+            </div>
+          </div>
+        </section>
+        <!-- Services -->
+        <section>
+          <div class="container-fluid bg-secondary">
+            <div class="row">
+              <h2 class="text-center text-decoration-underline my-4 display-2 mb-5 text-light">Nos Services</h2>
+              <div class="col-sm-12 col-md-3 col-lg mb-5">
+                <div class="card" style="border: none;background: none;">
+                  <div>
+                    <img src="assets/img/icons8-click-&-collect-50.png" class="card-img-top services" alt="Garantie" title="Garantie">
+                    <h3 class="text-center text-white">Click & Collect</h3>
+                    <div class="card-body">
+                      <p class="card-text text-center text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-12 col-md-3 offset-md-1 col-lg mb-5">
+                <div class="card" style="border: none;background: none;">
+                  <div>
+                    <img src="assets/img/icons8-card-security-50.png" class="card-img-top services" alt="Sécurité" title="Variété">
+                    <h3 class="text-center text-white">Paiment Sécurisé</h3>
+                    <div class="card-body">
+                      <p class="card-text text-center text-white">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-12 col-md-3 offset-md-1 col-lg mb-5">
+                <div class="card" style="border: none;background: none;">
+                    <img src="assets/img/icons8-delivery-50 (1).png" class="card-img-top services" alt="Varitété" title="Varitété">
+                    <h3 class="text-center text-white">Livraison</h3>
+                    <div class="card-body">
+                      <p class="card-text text-center text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+              </div>
+              <div class="col-sm-12 col-md-3 offset-md-1 col-lg mb-5">
+                <div class="card" style="border: none;background: none;">
+                    <img src="assets/img/icons8-return-50.png" class="card-img-top services" alt="Varitété" title="Varitété">
+                    <h3 class="text-center text-white">Retour</h3>
+                    <div class="card-body">
+                      <p class="card-text text-center text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+        <!-- Contact -->
+        <!-- Footer -->
+      </main>
       <div class="footer">
         <footer>
             <div class="social"><a href="#"><i class="fab  fa-instagram"></i></a><a href="#"><i class="fab fa-snapchat"></i></a><a href="#"><i class="fab fa-twitter"></i></a><a href="#"><i class="fab fa-facebook"></i></a></div>
             <ul class="list-inline">
-                <li class="list-inline-item"><a href="#">Accueil</a></li>
+                <li class="list-inline-item"></li><a href="#">Accueil</a></li>
                 <li class="list-inline-item"><a href="#">Nos produits</a></li>
                 <li class="list-inline-item"><a href="#">Notre expertise</a></li>
                 <li class="list-inline-item"><a href="#">Nous contactez</a></li>
