--- a/index.html
+++ b/index.html
@@ -165,28 +165,28 @@
           <div class="col-sm-12 col-md-3 col-lg mb-5">
             <div class="card" style="border: none;">
               <div>
-                <img src="assets/img/hp.png" class="card-img-top mx-auto d-block picto" alt="Garantie" title="Garantie">
+                <img src="assets/img/hp.png" class="card-img-top mx-auto d-block sponsor" alt="hp" title="marque hp">
               </div>
             </div>
           </div>
           <div class="col-sm-12 col-md-3  col-lg mb-5">
             <div class="card" style="border: none;">
               <div>
-                <img src="assets/img/lenovo.png" class="card-img-top mx-auto d-block picto" alt="Sécurité" title="Variété">
+                <img src="assets/img/lenovo.png" class="card-img-top mx-auto d-block sponsor" alt="lenovo" title="marque lenovo">
               </div>
             </div>
           </div>
           <div class="col-sm-12 col-md-3  col-lg mb-5">
             <div class="card" style="border: none;">
               <div>
-                <img src="assets/img/asus.png" class="card-img-top  mx-auto d-block picto" alt="Varitété" title="Varitété">
+                <img src="assets/img/asus.png" class="card-img-top  mx-auto d-block sponsor" alt="asus" title="marque asus">
               </div>
             </div>
           </div>
           <div class="col-sm-12 col-md-3  col-lg mb-5">
             <div class="card" style="border: none;">
               <div>
-                <img src="assets/img/alienware.png" class="card-img-top mx-auto d-block picto" alt="Varitété" title="Varitété">
+                <img src="assets/img/alienware.png" class="card-img-top mx-auto d-block sponsor" alt="alienware" title="marque aliesponsor">
               </div>
             </div>
           </div>
@@ -206,7 +206,7 @@
                   title="Garantie">
                 <h3 class="text-center text-white">Click & Collect</h3>
                 <div class="card-body">
-                  <p class="card-text text-center text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  <p class="card-text text-center text-white">Nous vous proponsons un service click and collect.
                   </p>
                 </div>
               </div>
@@ -215,11 +215,11 @@
           <div class="col-sm-12 col-md-3 offset-md-1 col-lg mb-5">
             <div class="card" style="border: none;background: none;">
               <div>
-                <img src="assets/img/icons8-card-security-50.png" class="card-img-top mx-auto d-block services" alt="Sécurité"
-                  title="Variété">
+                <img src="assets/img/icons8-card-security-50.png" class="card-img-top mx-auto d-block services" alt="Paiment sécurisé"
+                  title="Paiement sécurisé">
                 <h3 class="text-center text-white">Paiment Sécurisé</h3>
                 <div class="card-body">
-                  <p class="card-text text-center text-white">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  <p class="card-text text-center text-white">Nous vous proposons différent moyen de paiements sécurisés.
                   </p>
                 </div>
               </div>
@@ -227,20 +227,20 @@
           </div>
           <div class="col-sm-12 col-md-3 offset-md-1 col-lg mb-5">
             <div class="card" style="border: none;background: none;">
-              <img src="assets/img/icons8-delivery-50 (1).png" class="card-img-top mx-auto d-block services" alt="Varitété"
-                title="Varitété">
+              <img src="assets/img/icons8-delivery-50 (1).png" class="card-img-top mx-auto d-block services" alt="Livraison"
+                title="Livraison">
               <h3 class="text-center text-white">Livraison</h3>
               <div class="card-body">
-                <p class="card-text text-center text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <p class="card-text text-center text-white">Nous vous proposons des livraisons rapides.</p>
               </div>
             </div>
           </div>
           <div class="col-sm-12 col-md-3 offset-md-1 col-lg mb-5">
             <div class="card" style="border: none;background: none;">
-              <img src="assets/img/icons8-return-50.png" class="card-img-top services" alt="Varitété" title="Varitété">
+              <img src="assets/img/icons8-return-50.png" class="card-img-top services" alt="Retour" title="Retour">
               <h3 class="text-center text-white">Retour</h3>
               <div class="card-body">
-                <p class="card-text text-center text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <p class="card-text text-center text-white">Notre service retour est simple et efficace.</p>
               </div>
             </div>
           </div>
