--- a/index.html
+++ b/index.html
@@ -221,6 +221,44 @@
     </div>
   </section>
 
+ <!-- Nos Partenaires -->
+ <section>
+  <div class="container-fluid">
+    <div class="row">
+      <h2 class="text-center text-decoration-underline my-4 display-2 mb-5 mt-5">Nos Marques Partenaires</h2>
+      <div class="col-sm-12 col-md-3 col-lg mb-5">
+        <div class="card" style="border: none;">
+          <div>
+            <img src="assets/img/hp.png" class="card-img-top mx-auto d-block sponsor" alt="hp" title="marque hp">
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-12 col-md-3  col-lg mb-5">
+        <div class="card" style="border: none;">
+          <div>
+            <img src="assets/img/lenovo.png" class="card-img-top mx-auto d-block sponsor" alt="lenovo" title="marque lenovo">
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-12 col-md-3  col-lg mb-5">
+        <div class="card" style="border: none;">
+          <div>
+            <img src="assets/img/asus.png" class="card-img-top  mx-auto d-block sponsor" alt="asus" title="marque asus">
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-12 col-md-3  col-lg mb-5">
+        <div class="card" style="border: none;">
+          <div>
+            <img src="assets/img/alienware.png" class="card-img-top mx-auto d-block sponsor" alt="alienware" title="marque aliesponsor">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  </div>
+</section>
+
   <!-- Services -->
   <section>
     <div class="container-fluid bg-secondary">
